@@ -49,6 +49,11 @@ Data exploration
   * A drop down selection of previously set values is available.
   * Invalid values cause the dialog to remain open.
 
+- Typed aliases.  DDD now requires structural equivalence for aliases.
+  This means that two displays are only considered aliases if they are
+  at the same address _and_ have the same type.  See the
+  `typedAliases' resource for a discussion.
+
 - When DDD creates a new dependent display, it copies the selection
   state from the originating display.  This way, you can easily unfold
   linked elements simply by clicking `Disp *' again and again.
